# Botinama

./: .gitignore  .gitmodules  BitBoard.cpp  BitBoard.h  Bitscan.h  Board.cpp  Board.h  Board.hpp  BoardCompress.cpp  BoardEval.cpp  BoardIter.hpp  BoardSearch.cpp  BoardUtil.cpp  Botama.cpp  Botama.h  Botama.sln  Botama.vcxproj  Botama.vcxproj.filters  CMakeLists.txt  CMakeSettings.json  Card.cpp  Card.h  CardBoard.cpp  CardBoard.h  Connection.cpp  Connection.h  Game.cpp  Game.h  MoveGenerator.cpp  MoveGenerator.h  MoveTable.cpp  MoveTable.h  README.md  Score.h  Search.cpp  Search.h  Solve.cpp  Solve.h  TableBase.cpp  TableBase.h  (+7 more)
bxzstr/: config.hpp
enc_temp_folder/8639169243bba1fe7345a26e2fe/: notlosebot.cpp
flat_hash_map/: bytell_hash_map.hpp
patchmap/: index.html
sparsehash/: dense_hash_map.h  dense_hash_set.h  sparse_hash_map.h  sparse_hash_set.h  sparsetable.h
sparsehash/internal/: densehashtable.h  sparsehashtable.h
